# retroportal

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/retro/: Application.h  Core.h  Drawable.h  Event.h  Log.h  Mesh.h  Renderer.h  ShaderProgram.h  Texture.h
include/retro/ui/: DefaultShaderCode.h  Shaders.h
src/: Win32.cpp  main.cpp
src/glad/: glad.h
src/retro/: Application.cpp  Core.cpp  Event.cpp  Log.cpp  Mesh.cpp  Renderer.cpp  ShaderProgram.cpp  Texture.cpp
src/retro/impl/ANSI/: LogImpl_ANSI.cpp  LogImpl_ANSI.h
src/retro/impl/GL/: MeshImpl_GL.cpp  MeshImpl_GL.h  RendererImpl_GL.cpp  RendererImpl_GL.h  ShaderProgramImpl_GL.cpp  ShaderProgramImpl_GL.h  TextureImpl_GL.cpp  TextureImpl_GL.h  glad.c
src/retro/impl/GLFW/: ApplicationImpl_GLFW.cpp  ApplicationImpl_GLFW.h
